[package]
name = "zgc"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Concurrent GC in Rust"
repository = "https://github.com/nyar-vm/zero-gc"
documentation = "https://docs.rs/zgc"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
