[package]
name = "zgc"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Pauseless GC in Rust"
repository = "https://github.com/nyar-vm/zero-gc"
documentation = "https://docs.rs/zgc"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
#bitflags = "2.3.1"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
